# ZenDownload

./: .gitignore  .taurignore  BUILDING.md  CHANGELOG.md  CODEBASE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  catalog.json  com.zendownload.app.desktop  index.html  package.json
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile.build
docs/: PLUGIN_DEVELOPMENT.md
extension/: README.md  background.js  content.css  content.js  manifest.firefox.json  manifest.json  options.html  popup.html  popup.js
flatpak/: com.zendownload.app.json  com.zendownload.app.metainfo.xml
playstore/: README.md  listing.json  privacy-policy.md  release-notes.md
scripts/: build-android.sh  build.sh  (+4 more)
src-tauri/: Cargo.toml  com.zendownload.host.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/linux/: zendownload.desktop
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/browser/: clipboard.rs  mod.rs  ws_server.rs
src-tauri/src/engine/: adult_sites.rs  analytics.rs  api_server.rs  automation.rs  bandwidth.rs  checksum.rs  cli.rs  clipboard_intel.rs  completion.rs  converter.rs  dash.rs  debrid.rs  dedup.rs  diagnostics.rs  filename.rs  health_monitor.rs  hls.rs  http.rs  hybrid.rs  iptv.rs  link_checker.rs  m3u.rs  mirror_network.rs  mod.rs  native_messaging.rs  network_monitor.rs  plugin_system.rs  post_processor.rs  profiles.rs  protocols.rs  retry.rs  runtime_settings.rs  schedule.rs  scheduler.rs  security.rs  settings_sync.rs  sftp.rs  site_grabber.rs  stealth.rs  stream.rs  (+8 more)
src-tauri/src/engine/browser/: sniffer.rs
src-tauri/src/engine/cloud/: mod.rs
src-tauri/src/engine/music/: metadata.rs  mod.rs  platforms.rs  spotify.rs
src-tauri/src/grabber/: parser.rs
src-tauri/src/utils/: classifier.rs  keychain.rs  metadata.rs  mod.rs  speed_limiter.rs
src-tauri/tests/: crash_test.rs
(+106 files in other folders)
