[package]
name = "zendownload"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zendownload_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [ "tray-icon", "image-png", "protocol-asset" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
base64 = "0.22"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dirs = "5.0"
bytes = "1.5"
scraper = "0.20.0"
regex = "1.10"
zip = "0.6"
tar = "0.4"
url = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
keyring = "2.3.0"
arboard = "3.6.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
librqbit = "8.1.1"
librqbit-core = "5.0.0"
serde_with = "3.9"
quick-xml = "0.36"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
notify = "6.1"
notify-debouncer-mini = "0.4"
sysinfo = "0.31"
rand = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
